# clothing-dataset-small-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-usage.sh
.github/workflows/: publish.yml
src/: clothings.rs  config.rs  extended_clothings.rs  github_api.rs  lib.rs  main.rs
tests/resources/: clothings.csv  myntra_products_catalog.csv
