[package]
name = "dataset-manager"
version = "0.1.0"
authors = ["Mario Rojas"]
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = { version = "1.2.1" }
git2 = { version = "0.17.2" }
glob = { version = "0.3.1" }
itertools = { version = "0.11", features = ["use_std"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.163", features = ["derive"] }
tempfile = { version = "3.6.0" }
throbber = { version = "0.1.4" }