[package]
name = "dataset-manager"
version = "0.2.0"
authors = ["Mario Rojas"]
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = { version = "1.2.1" }
flate2 = "1.0.27"
glob = { version = "0.3.1" }
rand = { version = "0.8.5" }
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive", "rc"] }
tar = "0.4.40"
tempfile = { version = "3.6.0" }
throbber = { version = "0.1.4" }
